# bridge-mcp

./: .coverage  .dockerignore  .env  .env.example  CONTRIBUTING.md  DOCKER_README.md  Dockerfile  LICENSE  LOCAL_DEV.md  README.md  demo_audit_store.py  demo_audit_system.py  docker-compose.yml  env.example  main.py  pyproject.toml  requirements.txt  test_circuit_breaker_smoke.py  test_dashboard_endpoints.py  test_gateway.py
config/: services.yaml
dashboard/: README.md  index.html  package-lock.json  package.json  tailwind.config.js
dashboard/docs/: Dashboard_PRD.md  Features_Specification.md
dashboard/src/: App.tsx  index.css
dashboard/src/api/: client.ts
dashboard/src/components/layout/: Header.tsx  MainContent.tsx  Sidebar.tsx
dashboard/src/components/pages/: OverviewDashboard.tsx  Services.tsx
dashboard/src/components/services/: AddServiceModal.tsx
dashboard/src/components/ui/: components.tsx  index.ts  types.ts
dashboard/src/context/: AppContext.tsx
dashboard/src/hooks/: useApi.ts
dashboard/src/types/: index.ts
docs/: Agent_Integration_Guide.md  Audit_Module_Documentation.md  Authentication_System.md  Circuit_Breaker_Implementation.md  MCP_Compliance_Implementation_Plan.md  MCP_Gateway_PRD.md  OIDC_Setup_Guide.md  Rate_Limiting_Documentation.md  Rate_Limiting_Quick_Reference.md  ServiceRegistry_Configuration.md  Session_Management_Architecture.md
docs/temp/: Tasks_MCP_Compliance_Implementation.md
examples/: phase0_demo.py
scripts/: test_obo.py
src/mcp_gateway/: __init__.py  main.py
src/mcp_gateway/api/: dashboard_routes.py  models.py  routes.py
src/mcp_gateway/audit/: __init__.py  logger.py  store.py
src/mcp_gateway/auth/: __init__.py  authentication_middleware.py  exceptions.py  models.py  obo_service.py  token_validator.py
src/mcp_gateway/circuit_breaker/: __init__.py  breaker.py  exceptions.py  manager.py
src/mcp_gateway/core/: __init__.py  authenticated_proxy.py  config.py  logging.py  proxy.py  service_registry.py
src/mcp_gateway/mcp/: __init__.py  client_wrapper.py  exceptions.py  fastapi_integration.py  service_adapter.py  session_manager.py  transport_factory.py
src/mcp_gateway/models/: __init__.py
src/mcp_gateway/rl/: __init__.py  backend.py  config.py  exceptions.py  keys.py  limiter.py  middleware.py
src/mcp_gateway/routers/: __init__.py  dashboard.py  mcp_client.py
tests/: test_audit_event.py  test_audit_logger.py  test_audit_store.py  test_auth.py  test_circuit_breaker_integration.py  test_config.py  test_mcp_client_unit_demo.py  test_mcp_component.py  test_proxy_unit.py  test_rate_limiting.py  test_stream_normalization.py
tests/integration/: README.md  test_mcp_gateway_simple.py  test_mcp_integration_demo.py  test_sse_streaming.py
(+15 files in other folders)
